Try unrolling the Pass2 SIMD